Fixed spacing of input

--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -177,7 +177,7 @@ a {
 .input-container {
   width: 200px;
   input {
-    width: 190px;
+    width: 195px;
   }
 }
 
@@ -185,7 +185,7 @@ a {
   display: flex;
   position: relative;
   & input {
-    width: 165px;
+    width: 170px;
   }
 }
 
